<resources>
    <string name="app_name" translatable="false">The Fridge</string>
    <string name="skip_button_calendar">Skip</string>
    <string name="about_us">About us</string>
    <string name="login" translatable="false">LOGIN</string>
    <string name="log_in" translatable="false">Log in</string>
    <string name="signup" >signup</string>
    <string name="remember_me">Remember Me</string>
    <string name="password" translatable="false">Password</string>
    <string name="username">Username</string>
    <string name="or">or</string>
    <string name="add_food">Add Food</string>
    <string name="your_fridge">Your Fridge</string>
    <string name="recipes">Recipes</string>
    <string name="profile">Profile</string>
    <string name="choose_recipe">Choose Recipe</string>
    <string name="warning">Once you delete your profile you will lose all your data, are you sure to continue ?</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>
    <string name="search_food">Search food</string>
    <string name="search_recipes">Search Recipes</string>
    <string name="search">Search</string>
    <string name="your_profile">Your profile</string>
    <string name="delete_account">Delete account</string>
    <string name="ingredients">Ingredients</string>
    <string name="title">Title</string>
    <string name="go_to_the_recipe">GO TO THE RECIPE</string>
    <string name="view_more">View More</string>
    <string name="sign_up">SIGN UP</string>
    <string name="notification1">Oh no! Your</string>
    <string name="notification2">is expired!!!</string>
    <string name="titleNotification">Expiration message</string>
    <string name="email_address">Email address</string>
    <string name="description">This application is the final project of Mobile Programming course 2019/2020 from the university of Rome Tor Vergata.</string>
    <string name="taglienti_tiziano" translatable="false">Taglienti Tiziano</string>
    <string name="professor_regoli_massimo" translatable="false">Professor: Regoli Massimo</string>
    <string name="students">Students :</string>
    <string name="cristofori_valerio" translatable="false">Cristofori Valerio</string>
    <string name="di_battista_mattia" translatable="false">Di Battista Mattia</string>
    <string name="set_button">Set expiration</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="welcome">Welcome back </string>
    <string name="howmanyrecipes">How many recipes ?</string>
    <string name="description_functionality">We offer you some recipes that you can make with food in your fridge !</string>
    <string name="emptyfridge">Your fridge is empty, add some food !</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="logout" translatable="false">logout</string>
    <string name="category">category</string>
    <string name="example_text">example text</string>
    <string name="error_message_fridge">Fridge empty</string>
    <string name="error_message_username">Username wrong</string>
    <string name="error_message_password">Password wrong</string>
    <string name="error_message_username_password">Username/Password not valid</string>
    <string name="error_message_email">Email wrong</string>
    <string name="error_message_already_used">Username already used</string>


    <string name="tutorial_search_fridge">With this button you can search for a food in your fridge if you have many!</string>
    <string name="tutorial_fridge">Hi, welcome to The Fridge !\nIn this section you can see a list of the foods you have put in your fridge </string>
    <string name="tutorial_addfood">Here you can put the food in your fridge. Choose from a list</string>
    <string name="tutorial_search_food">With this button you can more easily search for a food to insert ... use it if you know the name</string>
    <string name="tutorial_recipe">You can search for 1 to 5 random recipes to make with food in your fridge. Choose the number of recipes, click the button and watch the magic!</string>
    <string name="tutorial_profile">In this section you can manage the profile and log out</string>
    <string name="tutorial_last_message">
I almost forgot! You will be notified every time a food expires.\nNow The Fridge is all for you!</string>

    <string-array name="food_categories">
        <item>Fruit</item>
        <item>Vegetable</item>
        <item>Meat</item>
        <item>Fish</item>
        <item>Cereals and Flour</item>
        <item>Bread and Pasta</item>
        <item>Legumes</item>
        <item>Mushroom</item>
        <item>Dairy Product</item>
        <item>Dessert</item>
        <item>Spices</item>
        <item>Sauces</item>
        <item>Beverages</item>
        <item>Vegan</item>
        <item>Oils</item>
    </string-array>
</resources>
