<?xml version="1.0" encoding="utf-8"?><androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"xmlns:app="http://schemas.android.com/apk/res-auto"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"android:layout_height="match_parent">    <androidx.constraintlayout.widget.ConstraintLayout        android:id="@+id/clTop"        android:layout_width="match_parent"        android:layout_height="40dp"        android:background="@color/myDarkBlue"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent">        <TextView            android:id="@+id/tvAboutUs"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginStart="20dp"            android:fontFamily="@font/comfortaa"            android:text="@string/search_recipes"            android:textStyle="bold"            android:textColor="@color/myWhite"            android:textSize="18sp"            app:layout_constraintBottom_toBottomOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="parent" />    </androidx.constraintlayout.widget.ConstraintLayout>    <androidx.constraintlayout.widget.ConstraintLayout        android:id="@+id/clCenter"        android:layout_width="match_parent"        android:layout_height="0dp"        android:background="@color/myColorForBackground"        app:layout_constraintBottom_toTopOf="@+id/clBottom"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintHorizontal_bias="0.0"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toBottomOf="@+id/clTop"        app:layout_constraintVertical_bias="0.0">        <ProgressBar            android:id="@+id/progressBar"            style="?android:attr/progressBarStyle"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginBottom="80dp"            android:visibility="invisible"            app:layout_constraintBottom_toTopOf="@+id/btnSearch"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent" />        <RadioGroup            android:id="@+id/rgNumRecipe"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginTop="220dp"            android:orientation="horizontal"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="parent">            <RadioButton                android:id="@+id/rbtn1"                style="@android:style/Widget.Material.Light.CompoundButton.RadioButton"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginHorizontal="10dp"                android:buttonTint="@color/myWhite"                android:fontFamily="@font/comfortaa"                android:text="@string/one"                android:textColor="@color/myWhite" />            <RadioButton                android:id="@+id/rbtn2"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginHorizontal="10dp"                android:buttonTint="@color/myWhite"                android:fontFamily="@font/comfortaa"                android:text="@string/two"                android:textColor="@color/myWhite" />            <RadioButton                android:id="@+id/rbtn3"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginHorizontal="10dp"                android:buttonTint="@color/myWhite"                android:fontFamily="@font/comfortaa"                android:text="@string/three"                android:textColor="@color/myWhite" />            <RadioButton                android:id="@+id/rbtn4"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginHorizontal="10dp"                android:buttonTint="@color/myWhite"                android:fontFamily="@font/comfortaa"                android:text="@string/four"                android:textColor="@color/myWhite" />            <RadioButton                android:id="@+id/rbtn5"                android:layout_width="match_parent"                android:layout_height="wrap_content"                android:layout_marginHorizontal="10dp"                android:buttonTint="@color/myWhite"                android:fontFamily="@font/comfortaa"                android:lineSpacingExtra="14sp"                android:text="@string/five"                android:textAlignment="center"                android:textColor="@color/myWhite"                android:textColorHint="@color/myWhite" />        </RadioGroup>        <Button            android:id="@+id/btnSearch"            android:layout_width="match_parent"            android:layout_height="wrap_content"            android:layout_marginStart="20dp"            android:layout_marginEnd="20dp"            android:layout_marginBottom="60dp"            android:backgroundTint="@color/green_color"            android:fontFamily="@font/comfortaa"            android:text="@string/search"            android:textColor="@color/myWhite"            app:layout_constraintBottom_toBottomOf="parent"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent" />        <TextView            android:id="@+id/textView8"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginStart="60dp"            android:layout_marginEnd="60dp"            android:layout_marginBottom="29dp"            android:fontFamily="@font/comfortaa"            android:text="@string/howmanyrecipes"            android:textColor="@color/myWhite"            android:textSize="18sp"            android:textStyle="bold"            app:layout_constraintBottom_toTopOf="@+id/rgNumRecipe"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toBottomOf="@+id/textView6"            app:layout_constraintVertical_bias="0.965" />        <TextView            android:id="@+id/textView6"            android:layout_width="0dp"            android:layout_height="wrap_content"            android:layout_marginStart="60dp"            android:layout_marginTop="67dp"            android:layout_marginEnd="60dp"            android:fontFamily="@font/comfortaa"            android:text="@string/description_functionality"            android:textColor="@color/myWhite"            android:textSize="18sp"            android:textStyle="bold"            app:layout_constraintEnd_toEndOf="parent"            app:layout_constraintStart_toStartOf="parent"            app:layout_constraintTop_toTopOf="parent" />    </androidx.constraintlayout.widget.ConstraintLayout>    <androidx.constraintlayout.widget.ConstraintLayout    android:id="@+id/clBottom"    android:layout_width="match_parent"    android:layout_height="60dp"    android:background="@color/myDarkBlue"    app:layout_constraintBottom_toBottomOf="parent"    app:layout_constraintEnd_toEndOf="parent"    app:layout_constraintHorizontal_bias="1.0"    app:layout_constraintStart_toStartOf="parent">    <TextView        android:id="@+id/textView5"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginStart="28dp"        android:layout_marginBottom="4dp"        android:fontFamily="@font/comfortaa"        android:text="@string/your_fridge"        android:textSize="@dimen/dimension_text_title_menu"        android:textStyle="bold"        android:textColor="@color/myGrey"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintStart_toStartOf="parent" />        <TextView            android:id="@+id/textView2"            android:layout_width="wrap_content"            android:layout_height="wrap_content"            android:layout_marginBottom="4dp"            android:fontFamily="@font/comfortaa"            android:text="@string/recipes"            android:textColor="@color/green_color"            android:textSize="@dimen/dimension_text_title_menu"            android:textStyle="bold"            app:layout_constraintBottom_toBottomOf="parent"            app:layout_constraintEnd_toStartOf="@+id/textView3"            app:layout_constraintHorizontal_bias="0.690"            app:layout_constraintStart_toEndOf="@+id/textView5" />    <TextView        android:id="@+id/textView3"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginEnd="36dp"        android:layout_marginBottom="4dp"        android:fontFamily="@font/comfortaa"        android:text="@string/profile"        android:textSize="@dimen/dimension_text_title_menu"        android:textStyle="bold"        android:textColor="@color/myGrey"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toEndOf="parent" />    <TextView        android:id="@+id/textView4"        android:layout_width="wrap_content"        android:layout_height="wrap_content"        android:layout_marginBottom="4dp"        android:fontFamily="@font/comfortaa"        android:text="@string/add_food"        android:textSize="@dimen/dimension_text_title_menu"        android:textStyle="bold"        android:textColor="@color/myGrey"        app:layout_constraintBottom_toBottomOf="parent"        app:layout_constraintEnd_toStartOf="@+id/textView2"        app:layout_constraintHorizontal_bias="0.470"        app:layout_constraintStart_toEndOf="@+id/textView5" />    <ImageButton        android:id="@+id/ibtnFridge"        android:layout_width="40dp"        android:layout_height="40dp"        android:layout_marginStart="30dp"        android:background="@android:color/transparent"        android:src="@drawable/ic_fridge_grey"        app:layout_constraintBottom_toTopOf="@+id/textView5"        app:layout_constraintStart_toStartOf="parent"        app:layout_constraintTop_toTopOf="parent"        tools:ignore="ContentDescription" />    <ImageButton        android:id="@+id/ibtnAddFood"        android:layout_width="40dp"        android:layout_height="40dp"        android:background="@android:color/transparent"        android:src="@drawable/ic_supermarket_grey"        app:layout_constraintBottom_toTopOf="@+id/textView4"        app:layout_constraintEnd_toStartOf="@+id/ibtnRecipes"        app:layout_constraintStart_toEndOf="@+id/ibtnFridge"        app:layout_constraintTop_toTopOf="parent"        tools:ignore="ContentDescription" />    <ImageButton        android:id="@+id/ibtnRecipes"        android:layout_width="40dp"        android:layout_height="40dp"        android:background="@android:color/transparent"        android:src="@drawable/ic_chef_green"        app:layout_constraintBottom_toTopOf="@+id/textView2"        app:layout_constraintEnd_toStartOf="@+id/ibtnProfile"        app:layout_constraintHorizontal_bias="0.717"        app:layout_constraintStart_toEndOf="@+id/ibtnFridge"        app:layout_constraintTop_toTopOf="parent"        tools:ignore="ContentDescription" />    <ImageButton        android:id="@+id/ibtnProfile"        android:layout_width="40dp"        android:layout_height="40dp"        android:layout_marginEnd="30dp"        android:background="@android:color/transparent"        android:src="@drawable/ic_account"        app:layout_constraintBottom_toTopOf="@+id/textView3"        app:layout_constraintEnd_toEndOf="parent"        app:layout_constraintTop_toTopOf="parent"        tools:ignore="ContentDescription" /></androidx.constraintlayout.widget.ConstraintLayout></androidx.constraintlayout.widget.ConstraintLayout>